--- a/ExpPayment.Business/ExpPayment.Business.csproj
+++ b/ExpPayment.Business/ExpPayment.Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
+	  <PackageReference Include="Dapper" Version="2.1.28" />
 	  <PackageReference Include="MediatR" Version="12.0.0" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.2" />
